5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1593_820.log
== TEST (2019-03-26 11:46:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:53:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto10 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = 50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))


-- ERROR:
File "XXXX", line 8
    valor // 50 = notas50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:53:46) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor//50 = notas50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto10 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = 50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))


-- ERROR:
File "XXXX", line 8
    valor//50 = notas50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:54:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto10 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = 50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas50=valor//50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:54:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto10 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = 50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    notas10 = resto10 // 10
NameError: name 'resto10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:54:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto10 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = 50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    notas10 = resto10 // 10
NameError: name 'resto10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:55:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = 50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))


-- OUTPUT:
40
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:55:12) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = 50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))


-- EXECUTION TIME:
0.131334
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:55:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = 50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))


-- OUTPUT:
40
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:56:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = 50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10// 2

print(int(notas50))
print(int(notas10))
print(int(notas2))


-- OUTPUT:
40
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:57:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto3 = valor% 10

# Quantidade de notas de R$ 2
notas2 = resto3// 2

print(int(notas50))
print(int(notas10))
print(int(notas2))


-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:57:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50=valor//50

# Valor restante a ser sacado com notas menores que R$ 50
resto = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto3 = valor% 10

# Quantidade de notas de R$ 2
notas2 = resto3// 2

print(int(notas50))
print(int(notas10))
print(int(notas2))


-- EXECUTION TIME:
0.146468
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
